add part 3 : microservice definitions

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://hostettler.net/404.html" />
 <meta property="og:site_name" content="Steve Hostettler" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Steve Hostettler","url":"http://hostettler.net/404.html","description":"Steve Hostettler’s personal blog about automatic testing, Java, Java EE, and Architecture.","@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://hostettler.net/404.html","description":"Steve Hostettler’s personal blog about automatic testing, Java, Java EE, and Architecture.","headline":"Steve Hostettler","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://hostettler.net/feed.xml" title="Steve Hostettler" /></head>
 <body><header class="site-header" role="banner">
